# mermaid-mcp-server

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
mcp_tests/: README_TESTS.md
mcp_tests/tests/: conftest.py  test_cache.py  test_github_client.py  test_github_source.py  test_inputs.py  test_kroki_client.py  test_local_source.py  test_pacing.py  test_rate_limiter.py  test_refs.py  test_server.py  test_source_factory.py  test_tools_list_files.py  test_tools_read_file.py  test_tools_render_mermaid.py
src/: config.py
src/clients/: github_client.py  kroki_client.py
src/clients/github/: client.py  inputs.py  refs.py
src/core/: cache.py  errors.py  interfaces.py  models.py  pacing.py  paths.py  rate_limiter.py
src/prompts/: mermaid_prompt.py
src/resources/: mermaid_style_blue_flowchart.mmd  mermaid_styles.py
src/server/: server.py
src/sources/: github_source.py  local_source.py  source_factory.py
src/tools/: list_files.py  read_file.py  render_mermaid.py
